@@ -134,6 +134,12 @@ CFURLProtectionSpaceRef createCF(const ProtectionSpace& coreSpace)
     case ProtectionSpaceAuthenticationSchemeHTMLForm:
         scheme = kCFURLProtectionSpaceAuthenticationSchemeHTMLForm;
         break;
+    case ProtectionSpaceAuthenticationSchemeNTLM:
+        scheme = kCFURLProtectionSpaceAuthenticationSchemeNTLM;
+        break;
+    case ProtectionSpaceAuthenticationSchemeNegotiate:
+        scheme = kCFURLProtectionSpaceAuthenticationSchemeNegotiate;
+        break;
     default:
         ASSERT_NOT_REACHED();
     }
@@ -212,6 +218,12 @@ ProtectionSpace core(CFURLProtectionSpaceRef cfSpace)
         break;
     case kCFURLProtectionSpaceAuthenticationSchemeHTMLForm:
         scheme = ProtectionSpaceAuthenticationSchemeHTMLForm;
+        break;
+    case kCFURLProtectionSpaceAuthenticationSchemeNTLM:
+        scheme = ProtectionSpaceAuthenticationSchemeNTLM;
+        break;
+    case kCFURLProtectionSpaceAuthenticationSchemeNegotiate:
+        scheme = ProtectionSpaceAuthenticationSchemeNegotiate;
         break;
     default:
         ASSERT_NOT_REACHED();
